tests/type-errors/types/function_typedef_parameter.cx
typedef int callback_t(int x);

int accepts_callback(callback_t callback) {
    return 0;
}

int main() {
    return 0;
}
